--- a/src/main/resources/templates/vehicle/list.html
+++ b/src/main/resources/templates/vehicle/list.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Cache-Control" content="No-Cache" />
 	<meta http-equiv="Pragma" content="No-Cache" />
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
-	<title>My First Web Free Board List</title>
+	<title>Vehicle list</title>
 </head>
 <body>
 
